--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="Map with resturants"></div>
     </section>
     <section>
       <div class="filter-options">
